[gd_scene load_steps=49 format=3 uid="uid://bltx7b8frjhjd"]

[ext_resource type="Script" path="res://Characters/Prof/Prof.gd" id="1_4paqg"]
[ext_resource type="PackedScene" uid="uid://imkk6qltwdef" path="res://Hitbox/HitboxSword.tscn" id="2_a88d7"]
[ext_resource type="Script" path="res://Characters/Prof/state_machineProf.gd" id="3_t1ky2"]
[ext_resource type="Texture2D" uid="uid://cxv15wx0pl7kk" path="res://Characters/Prof/Sprites/Default.png" id="4_5jgtt"]
[ext_resource type="Texture2D" uid="uid://dqaxyi2ib060j" path="res://Characters/Prof/Sprites/DyingSprites (2).png" id="4_pj82m"]
[ext_resource type="AudioStream" uid="uid://bj2wmqoos0r0o" path="res://sounds/Movement/Jump-Landing.wav" id="5_e546o"]
[ext_resource type="Texture2D" uid="uid://bwfgyg36ku0d6" path="res://Characters/Prof/Sprites/DyingSpritesBlue.png" id="5_n14ou"]
[ext_resource type="AudioStream" uid="uid://ca6xli3v63nq6" path="res://sounds/Movement/Dash.wav" id="6_f504o"]
[ext_resource type="Texture2D" uid="uid://brqx56ngdklvu" path="res://Characters/Prof/Sprites/DefaultBlue.png" id="6_ho81m"]
[ext_resource type="Texture2D" uid="uid://b2e7mt0xnr2yw" path="res://Characters/Prof/Sprites/DyingSpritesRed.png" id="6_ieakl"]
[ext_resource type="Texture2D" uid="uid://dn2u4bbecw7br" path="res://Characters/Prof/Sprites/DefaultRed.png" id="7_270ic"]
[ext_resource type="Texture2D" uid="uid://bdcu0vdwdl2am" path="res://UI/Common/Particles/coinFrame.png" id="12_dtbpc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hy6eo"]
atlas = ExtResource("4_pj82m")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn01e"]
atlas = ExtResource("4_pj82m")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6rno"]
atlas = ExtResource("4_pj82m")
region = Rect2(0, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4rld"]
atlas = ExtResource("4_pj82m")
region = Rect2(600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay3tr"]
atlas = ExtResource("4_pj82m")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqlhl"]
atlas = ExtResource("4_pj82m")
region = Rect2(600, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ssjn"]
atlas = ExtResource("5_n14ou")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsndk"]
atlas = ExtResource("5_n14ou")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk5eo"]
atlas = ExtResource("5_n14ou")
region = Rect2(0, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ma7n"]
atlas = ExtResource("5_n14ou")
region = Rect2(600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bbc3"]
atlas = ExtResource("5_n14ou")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnjcd"]
atlas = ExtResource("5_n14ou")
region = Rect2(600, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1p6t"]
atlas = ExtResource("6_ieakl")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_th7pg"]
atlas = ExtResource("6_ieakl")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmswx"]
atlas = ExtResource("6_ieakl")
region = Rect2(0, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_itr4r"]
atlas = ExtResource("6_ieakl")
region = Rect2(600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cyd7"]
atlas = ExtResource("6_ieakl")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkgef"]
atlas = ExtResource("6_ieakl")
region = Rect2(600, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm3qh"]
atlas = ExtResource("4_5jgtt")
region = Rect2(0, 0, 74, 78)

[sub_resource type="SpriteFrames" id="SpriteFrames_lkorh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy6eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn01e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6rno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4rld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay3tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqlhl")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ssjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsndk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk5eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ma7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bbc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnjcd")
}],
"loop": false,
"name": &"Death_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1p6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th7pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmswx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itr4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cyd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkgef")
}],
"loop": false,
"name": &"Death_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm3qh")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ho81m")
}],
"loop": true,
"name": &"IDLE_BLUE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_270ic")
}],
"loop": true,
"name": &"IDLE_RED",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_28guj"]
resource_name = "Idle"
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IDLE"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.15, 0.266667, 0.416667, 0.45, 0.533333, 0.65, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_me1s2"]
resource_name = "Idle_blue"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_67vft"]
resource_name = "Idle_red"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hedpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IDLE"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wfxwe"]
resource_name = "death"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0681818, 0.159091, 0.272727, 0.409091, 0.545455),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_omh6s"]
resource_name = "death_blue"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668, 0.166667, 0.266667, 0.416667, 0.550001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_yuira"]
resource_name = "death_red"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668, 0.166667, 0.266667, 0.416667, 0.550001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttlgo"]
_data = {
"Idle": SubResource("Animation_28guj"),
"Idle_blue": SubResource("Animation_me1s2"),
"Idle_red": SubResource("Animation_67vft"),
"RESET": SubResource("Animation_hedpg"),
"death": SubResource("Animation_wfxwe"),
"death_blue": SubResource("Animation_omh6s"),
"death_red": SubResource("Animation_yuira")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv3l7"]
size = Vector2(36, 64)

[sub_resource type="SystemFont" id="SystemFont_ibulo"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_kk0uu"]
base_font = SubResource("SystemFont_ibulo")

[sub_resource type="SystemFont" id="SystemFont_thuoc"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_px7oa"]
base_font = SubResource("SystemFont_thuoc")

[sub_resource type="SystemFont" id="SystemFont_87bpo"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="FontVariation" id="FontVariation_m7rmm"]
base_font = SubResource("SystemFont_87bpo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pbu43"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(-7, 10, 0)
gravity = Vector3(-98, -98, 0)
radial_accel_min = -100.0
radial_accel_max = 100.0
scale_min = 0.08
scale_max = 0.08
scale_over_velocity_max = 0.5

[node name="PROF" type="CharacterBody2D"]
collision_mask = 6
slide_on_ceiling = false
platform_floor_layers = 6
script = ExtResource("1_4paqg")
pendulum_sword = ExtResource("2_a88d7")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_t1ky2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_lkorh")
animation = &"IDLE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_ttlgo")
}

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iv3l7")

[node name="Raycasts" type="Node2D" parent="."]

[node name="GroundL" type="RayCast2D" parent="Raycasts"]
position = Vector2(-18, 24)
target_position = Vector2(0, 10)
collision_mask = 6
hit_from_inside = true

[node name="GroundR" type="RayCast2D" parent="Raycasts"]
position = Vector2(18, 24)
target_position = Vector2(0, 10)
collision_mask = 6
hit_from_inside = true

[node name="Frames" type="Label" parent="."]
visible = false
offset_left = -36.0
offset_top = -94.0
offset_right = 36.0
offset_bottom = -71.0
scale = Vector2(1.00731, 1.0045)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_kk0uu")
text = "45"
horizontal_alignment = 1

[node name="State" type="Label" parent="."]
visible = false
offset_left = -36.0
offset_top = -71.0
offset_right = 36.0
offset_bottom = -48.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_px7oa")
text = "Test"
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
visible = false
offset_left = 48.0
offset_top = -79.0
offset_right = 120.0
offset_bottom = -56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_m7rmm")
text = "Health"
horizontal_alignment = 1

[node name="Landing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_e546o")
bus = &"Sound"

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_f504o")
bus = &"Sound"

[node name="coinParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_pbu43")
texture = ExtResource("12_dtbpc")
lifetime = 0.8
one_shot = true
explosiveness = 0.5
fixed_fps = 60
